A serious attempt to break the DBResult class by refining data types to clear type safety warnings.